chore(quality): address a variety of quality issues